Style: Various fixes, align more toolbars

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1305,6 +1305,9 @@ dialog {
     padding: 0.75rem;
     padding-top: 1.5rem;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 .gui_box_titlebar {
     color: var(--surface-100);
@@ -1365,7 +1368,7 @@ dialog {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.5rem;
     .select {
         display: flex;
         gap: 1rem;
@@ -1609,7 +1612,7 @@ table {
     position: relative;
 }
 .tab-led-strip {
-    height: fit-content;
+    height: 100%;
     position: relative;
 }
 .tab-logging {
@@ -1649,7 +1652,11 @@ table {
     position: relative;
 }
 .tab-power {
-    height: fit-content;
+    height: 100%;
+    position: relative;
+}
+.tab-vtx {
+    height: 100%;
     position: relative;
 }
 .properties {
@@ -1764,7 +1771,7 @@ button.active {
     display: none;
 }
 .darkgrey_box {
-    background-color: #575757;
+    background-color: var(--surface-500);
     color: white;
 }
 .topBorderLine {
@@ -2114,12 +2121,6 @@ button.active {
             margin-top: -35px;
             font-size: 9px;
             line-height: 15px;
-        }
-    }
-    .cf_table {
-        td {
-            padding-top: 2px;
-            padding-bottom: 2px;
         }
     }
     .default_btn {
