--- a/src/css/tabs/firmware_flasher.less
+++ b/src/css/tabs/firmware_flasher.less
@@ -61,7 +61,7 @@
 	}
 	.cf_table {
 		td {
-            height: 1.75rem;
+            height: 2rem;
 		}
 	}
     select[name="firmware_version"], select[name="build_type"], .board-select .select2-container {
@@ -72,7 +72,6 @@
         position: relative;
         width: calc(100% - 2rem) !important;
         max-width: 24rem !important;
-        height: 1.5rem;
         display: inline-block;
         box-sizing: border-box;
         .select2-container {
