--- a/src/css/tabs/power.less
+++ b/src/css/tabs/power.less
@@ -10,17 +10,6 @@
 	.label {
 		width: 25%;
 	}
-	.number {
-		margin-bottom: 0.5rem;
-        padding-bottom: 0.5rem;
-		border-bottom: 1px solid var(--surface-500);
-		width: 100%;
-		&:last-child {
-			border-bottom: none;
-			padding-bottom: 0;
-			margin-bottom: 0;
-		}
-	}
 	.select {
 		margin-bottom: 0.5rem;
         padding-bottom: 0.5rem;
